--- a/modules/samples/consumers/websocket/build.xml
+++ b/modules/samples/consumers/websocket/build.xml
@@ -1,19 +1,17 @@
 <!--
   ~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
   ~
-  ~ WSO2 Inc. licenses this file to you under the Apache License,
-  ~ Version 2.0 (the "License"); you may not use this file except
-  ~ in compliance with the License.
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~ Unless required by applicable law or agreed to in writing,
-  ~ software distributed under the License is distributed on an
-  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  ~ KIND, either express or implied.  See the License for the
-  ~ specific language governing permissions and limitations
-  ~ under the License.
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
   -->
 
 <project default="run">
@@ -23,22 +21,25 @@
     <property name="resources.dir" value="src/main/resources"/>
     <property name="temp.dir" value="temp"/>
     <property name="class.dir" value="${temp.dir}/classes"/>
-    <property name="main-class" value="org.wso2.carbon.sample.websocket.WebSocketServer"/>
+    <property name="main-class" value="org.wso2.carbon.sample.websocket.Websocket"/>
     <property name="lib.dir" value="../../lib"/>
 
-
-    <property name="sn" value=""/>
-    <property name="topic" value=""/>
-    <property name="format" value=""/>
-    <property name="filePath" value=""/>
+    <property name="port" value="9099"/>
+    <property name="url" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
-        <fileset dir="${lib.dir}"/>
-        <fileset dir="lib"/>
+        <fileset dir="${lib.dir}">
+            <include name="*.jar"/>
+        </fileset>
+        <fileset dir="${carbon.home}/repository/components/plugins/">
+            <include name="org.wso2.carbon.logging_*.jar"/>
+        </fileset>
     </path>
 
+
     <target name="clean">
+        <!--<delete dir="target" quiet="true"/>-->
         <delete dir="${class.dir}" quiet="true"/>
         <delete dir="${temp.dir}"/>
     </target>
@@ -59,18 +60,14 @@
             </fileset>
         </copy>
     </target>
+
     <target name="run" depends="compile">
-        <echo> Configure -Durl=xxxx -Dtopic=xxxx and (-DfilePath=xxxx and/or -Dsn='sample number') </echo>
+        <echo> Configure -Dport='server port' or -Durl='client url'</echo>
         <java classname="${main-class}"
               classpathref="javac.classpath">
-            <!--<jvmarg value="-Xdebug" />-->
-            <!--<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005" />-->
+            <arg value="${port}"/>
             <arg value="${url}"/>
-            <arg value="${topic}"/>
-            <arg value="${filePath}"/>
-            <arg value="${sn}"/>
         </java>
-        <echo> Ended ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ </echo>
     </target>
 
 </project>
