--- a/pom.xml
+++ b/pom.xml
@@ -771,7 +771,7 @@
         <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
         <carbon.deployment.version>4.7.0</carbon.deployment.version>
         <carbon.commons.version>4.5.4</carbon.commons.version>
-        <carbon.analytics-common.version>5.1.16-SNAPSHOT</carbon.analytics-common.version>
+        <carbon.analytics-common.version>5.1.17</carbon.analytics-common.version>
         <carbon.dashboards.version>2.0.2</carbon.dashboards.version>
         <carbon.identity.version>5.2.0</carbon.identity.version>
         <carbon.identity.auth.saml2.version>5.1.3</carbon.identity.auth.saml2.version>
@@ -780,7 +780,7 @@
         <carbon.metrics.version>1.2.2</carbon.metrics.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
-        <carbon.event-processing.version>2.1.10-SNAPSHOT</carbon.event-processing.version>
+        <carbon.event-processing.version>2.1.9</carbon.event-processing.version>
         <siddhi.version>3.1.2</siddhi.version>
         <cep.version>4.2.1-SNAPSHOT</cep.version>
         <test.framework.version>4.4.2</test.framework.version>
